Issue solved
