# app/Services/FourIRServices/FourIRResourceService.php
@@ -1,14 +1,18 @@
 <?php
 
 
-namespace App\Services\FourIRResourceService;
+namespace App\Services\FourIRServices;
 
 use App\Models\BaseModel;
+use App\Models\FourIRProject;
 use App\Models\FourIRResource;
+use Carbon\Carbon;
 use Illuminate\Database\Eloquent\Builder;
+use Illuminate\Database\Eloquent\Collection;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Validator;
 use Illuminate\Validation\Rule;
+use Symfony\Component\HttpFoundation\Response;
 
 
 /**
@@ -18,6 +22,57 @@ use Illuminate\Validation\Rule;
 class FourIRResourceService
 {
 
+    public function getFourIRResourceList(array $request, Carbon $startTime): array
+    {
+
+        $paginate = $request['page'] ?? "";
+        $pageSize = $request['page_size'] ?? "";
+        $rowStatus = $request['row_status'] ?? "";
+        $order = $request['order'] ?? "ASC";
+
+        /** @var Builder $fourIrResourceBuilder */
+        $fourIrResourceBuilder = FourIRResource::select(
+            [
+                'four_ir_resources.id',
+                'four_ir_resources.four_ir_project_id',
+                'four_ir_resources.file_path',
+                'four_ir_resources.row_status',
+                'four_ir_resources.created_by',
+                'four_ir_resources.updated_by',
+                'four_ir_resources.created_at',
+                'four_ir_resources.updated_at',
+            ]
+        );
+
+        $fourIrResourceBuilder->orderBy('four_ir_resources.id', $order);
+
+        if (is_numeric($rowStatus)) {
+            $fourIrResourceBuilder->where('four_ir_resources.row_status', $rowStatus);
+        }
+
+        /** @var Collection $fourIrProjects */
+        if (is_numeric($paginate) || is_numeric($pageSize)) {
+            $pageSize = $pageSize ?: BaseModel::DEFAULT_PAGE_SIZE;
+            $fourIrProjects = $fourIrResourceBuilder->paginate($pageSize);
+            $paginateData = (object)$fourIrProjects->toArray();
+            $response['current_page'] = $paginateData->current_page;
+            $response['total_page'] = $paginateData->last_page;
+            $response['page_size'] = $paginateData->per_page;
+            $response['total'] = $paginateData->total;
+        } else {
+            $fourIrProjects = $fourIrResourceBuilder->get();
+        }
+
+        $response['order'] = $order;
+        $response['data'] = $fourIrProjects->toArray()['data'] ?? $fourIrProjects->toArray();
+        $response['_response_status'] = [
+            "success" => true,
+            "code" => Response::HTTP_OK,
+            "query_time" => $startTime->diffInSeconds(Carbon::now())
+        ];
+
+        return $response;
+    }
     /**
      * @param int $id
      * @return FourIRResource
@@ -68,7 +123,7 @@ class FourIRResourceService
             'four_ir_project_id' => [
                 'required',
                 'integer',
-                'exists:four_ir_projects,id,deleted_at,NULL',
+                'exists:four_ir_resources,id,deleted_at,NULL',
             ],
             'accessor_type' => [
                 'required',
@@ -95,4 +150,33 @@ class FourIRResourceService
         ];
         return Validator::make($request->all(), $rules, $customMessage);
     }
+    public function filterValidator(Request $request): \Illuminate\Contracts\Validation\Validator
+    {
+        $customMessage = [
+            'order.in' => 'Order must be within ASC or DESC.[30000]',
+            'row_status.in' => 'Row status must be within 1 or 0. [30000]'
+        ];
+
+        if ($request->filled('order')) {
+            $request->offsetSet('order', strtoupper($request->get('order')));
+        }
+
+        return Validator::make($request->all(), [
+            'four_ir_project_id' => 'required|int',
+            'page' => 'nullable|integer|gt:0',
+            'page_size' => 'nullable|integer|gt:0',
+            'start_date' => 'nullable|date',
+            'order' => [
+                'nullable',
+                'string',
+                Rule::in([BaseModel::ROW_ORDER_ASC, BaseModel::ROW_ORDER_DESC])
+            ],
+            'row_status' => [
+                'nullable',
+                "integer",
+                Rule::in([BaseModel::ROW_STATUS_ACTIVE, BaseModel::ROW_STATUS_INACTIVE]),
+            ],
+        ], $customMessage);
+    }
+
 }
